argocd/infra/cnpg/operator-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cnpg-operator
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: cloudnative-pg
      k8s:app.kubernetes.io/instance: cloudnative-pg
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:cnpg.io/podRole: instance
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "5432"
              protocol: TCP
